crates/plotnik-tests/tests/04-emit/bytecode/quantifiers/one_or_more_impossible_body.txt
Q = (function_declaration
  (program)
)+ @fns
------------------ DIAGNOSTICS -------------------
error: `program` cannot be a child of this node
 --> query.ptk:2:4
  |
1 | Q = (function_declaration
  |      -------------------- on `function_declaration`
2 |   (program)
  |    ^^^^^^^
  |
help: `function_declaration` has no unlabeled children — use its grammar fields: `body: (statement_block)`, `name: (identifier)`, `parameters: (formal_parameters)`
